# toggl-timeguru

./: .gitignore  .goreleaser.yaml  AGENTS.md  BUILD_NOTES.md  CLAUDE.md  Cargo.toml  Dockerfile.goreleaser  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: API_OPTIMIZATION_ANALYSIS.md  INITIAL_FUNCTIONAL_ANALYSIS.md  LIBRARY_RECOMMENDATIONS.md  PROGRESS.md  TECH_STACK.md  VERSION_TIMELINE.md
src/: cli.rs  main.rs  processor.rs  report.rs
src/config/: mod.rs
src/db/: connection.rs  mod.rs  schema.rs
src/toggl/: client.rs  mod.rs  models.rs
src/ui/: app.rs  components.rs
