[package]
name = "toggl-timeguru"
version = "1.1.2"
edition = "2024"
authors = ["Dominik Zarsky <dzarsky@dzarsky.eu>"]
description = "A powerful CLI tool for managing and analyzing Toggl Track time entries"
license = "MIT"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
ratatui = "0.29"
crossterm = "0.28"
confy = "0.6"
ring = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
base64 = "0.22"
dirs = "5.0"
arboard = "3.4"
csv = "1.3"

[dev-dependencies]
mockito = "1.6"
